--- a/exerciciosJs/lista01/index.html
+++ b/exerciciosJs/lista01/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Criando pagina de teste</H1>
+    
+    <div class="fundo">
+        <H1>Criando pagina de teste</H1>
+    </div>
 </body>
 </html>
 <script>
